--- a/test_setup.ipynb
+++ b/test_setup.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "Accuracy: 92.9%\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[589,  49],\n",
+       "       [ 41, 588]], dtype=int64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -22,7 +33,43 @@
     "from sklearn.linear_model import PassiveAggressiveClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
-    "print('hello')\n"
+    "# read data\n",
+    "df = pd.read_csv('C:\\\\Users\\\\xujer\\\\Documents\\\\Projects\\\\Test\\\\news.csv')\n",
+    "\n",
+    "# get shape and head\n",
+    "df.shape\n",
+    "df.head()\n",
+    "\n",
+    "# get labels\n",
+    "labels = df.label\n",
+    "labels.head()\n",
+    "\n",
+    "# split the dataset\n",
+    "x_train, x_test, y_train, y_test = train_test_split(df['text'], labels, test_size=0.2, random_state=7)\n",
+    "\n",
+    "#DataFlair - Initialize a TfidfVectorizer\n",
+    "tfidf_vectorizer=TfidfVectorizer(stop_words='english', max_df=0.7)\n",
+    "\n",
+    "#DataFlair - Fit and transform train set, transform test set\n",
+    "tfidf_train=tfidf_vectorizer.fit_transform(x_train) \n",
+    "tfidf_test=tfidf_vectorizer.transform(x_test)\n",
+    "\n",
+    "#DataFlair - Initialize a PassiveAggressiveClassifier\n",
+    "pac=PassiveAggressiveClassifier(max_iter=50)\n",
+    "pac.fit(tfidf_train,y_train)\n",
+    "\n",
+    "#DataFlair - Predict on the test set and calculate accuracy\n",
+    "y_pred=pac.predict(tfidf_test)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(f'Accuracy: {round(score*100,2)}%')\n",
+    "\n",
+    "#DataFlair - Build confusion matrix\n",
+    "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])\n",
+    "\n",
+    "''' output:\n",
+    "    [[true positives, false negatives],\n",
+    "    [false positives, true negatives]]\n",
+    "'''"
    ]
   }
  ],
