--- a/test_setup.ipynb
+++ b/test_setup.ipynb
@@ -47,23 +47,23 @@
     "# split the dataset\n",
     "x_train, x_test, y_train, y_test = train_test_split(df['text'], labels, test_size=0.2, random_state=7)\n",
     "\n",
-    "#DataFlair - Initialize a TfidfVectorizer\n",
+    "# initialize a TfidfVectorizer\n",
     "tfidf_vectorizer=TfidfVectorizer(stop_words='english', max_df=0.7)\n",
     "\n",
-    "#DataFlair - Fit and transform train set, transform test set\n",
+    "# fit and transform train set, transform test set\n",
     "tfidf_train=tfidf_vectorizer.fit_transform(x_train) \n",
     "tfidf_test=tfidf_vectorizer.transform(x_test)\n",
     "\n",
-    "#DataFlair - Initialize a PassiveAggressiveClassifier\n",
+    "# initialize a PassiveAggressiveClassifier\n",
     "pac=PassiveAggressiveClassifier(max_iter=50)\n",
     "pac.fit(tfidf_train,y_train)\n",
     "\n",
-    "#DataFlair - Predict on the test set and calculate accuracy\n",
+    "# predict on the test set and calculate accuracy\n",
     "y_pred=pac.predict(tfidf_test)\n",
     "score=accuracy_score(y_test,y_pred)\n",
     "print(f'Accuracy: {round(score*100,2)}%')\n",
     "\n",
-    "#DataFlair - Build confusion matrix\n",
+    "# build confusion matrix\n",
     "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])\n",
     "\n",
     "''' output:\n",
