--- a/test_setup.ipynb
+++ b/test_setup.ipynb
@@ -2,26 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.9%\n"
+      "Accuracy: 93.05%\n",
+      "[[580  35]\n",
+      " [ 53 599]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[589,  49],\n",
-       "       [ 41, 588]], dtype=int64)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -36,16 +27,18 @@
     "# read data\n",
     "df = pd.read_csv('C:\\\\Users\\\\xujer\\\\Documents\\\\Projects\\\\Test\\\\news.csv')\n",
     "\n",
-    "# get shape and head\n",
+    "# get dimensions of data set\n",
     "df.shape\n",
-    "df.head()\n",
     "\n",
-    "# get labels\n",
+    "# get first 5 news articles\n",
+    "df.head()\n",
+    "# get FAKE / REAL labels of the first 5 articles\n",
     "labels = df.label\n",
     "labels.head()\n",
     "\n",
-    "# split the dataset\n",
-    "x_train, x_test, y_train, y_test = train_test_split(df['text'], labels, test_size=0.2, random_state=7)\n",
+    "# split the dataset into random train and test subsets\n",
+    "# split into 80% for training and 20% for testing\n",
+    "x_train, x_test, y_train, y_test = train_test_split(df['text'], labels, test_size=0.2, random_state=17)\n",
     "\n",
     "# initialize a TfidfVectorizer\n",
     "tfidf_vectorizer=TfidfVectorizer(stop_words='english', max_df=0.7)\n",
@@ -56,20 +49,18 @@
     "\n",
     "# initialize a PassiveAggressiveClassifier\n",
     "pac=PassiveAggressiveClassifier(max_iter=50)\n",
-    "pac.fit(tfidf_train,y_train)\n",
+    "# fit on vectorized x_train and compare to target vector y_train\n",
+    "pac.fit(tfidf_train, y_train)\n",
     "\n",
-    "# predict on the test set and calculate accuracy\n",
+    "# use trained pac to predict on the test set and calculate accuracy\n",
     "y_pred=pac.predict(tfidf_test)\n",
-    "score=accuracy_score(y_test,y_pred)\n",
+    "score=accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {round(score*100,2)}%')\n",
     "\n",
-    "# build confusion matrix\n",
-    "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])\n",
-    "\n",
-    "''' output:\n",
-    "    [[true positives, false negatives],\n",
-    "    [false positives, true negatives]]\n",
-    "'''"
+    "# output:\n",
+    "#   [[true positives, false negatives],\n",
+    "#   [false positives, true negatives]]\n",
+    "print(confusion_matrix(y_test, y_pred, labels=['FAKE','REAL']))\n"
    ]
   }
  ],
